--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Week03"]
 	path = Week03
 	url = git@github.com:gbc-ekos/comp2152_week03.git
+[submodule "comp2152_labs"]
+	path = comp2152_labs
+	url = git@github.com:gbc-ekos/comp2152_labs.git
